# shapely-pydantic

./: LICENSE  README.md  pyproject.toml
shapely_pydantic/: __init__.py
tests/: test_types.py
